test(location): align unit tests with Country/Address/StateOrProvince APIs
Co-authored-by: Cursor <cursoragent@cursor.com>